	================== release-1-8-1 ======================================
	
2002-10-29  Todd Dukes  <Todd.Dukes@motorola.com>

	*  moved C++ RNumber  and Random into rnumber namespace.

	================== version 1.7.1 ======================================
	
2002-10-18  Todd Dukes  <Todd.Dukes@motorola.com>

	*  added (rnumber->int rnumber) to convert small rnumbers to integers.

2002-10-17  Todd Dukes  <Todd.Dukes@motorola.com>

	*  added rnumber to the SUBDIRS of bigloo/Makefile.am

	================== version 1.7.0 ======================================
	
2002-10-09  Todd Dukes  <Todd.Dukes@motorola.com>

	* exposed rn* to bigloo.
	* rnumber_ui_multiply_rn was misnamed as rnumber_ui_multiply_ui. This was fixed.

2002-09-30  Todd Dukes  <Todd.Dukes@motorola.com>

	* removed print from rnumber_finalize.
	* cleaned up makefiles a bit.
	* added def for bgl_rnumber_proxy_t? so rnumber will build without unsafe
	  option.

	================== version 1.6.2 ======================================

2002-09-24  Todd Dukes  <Todd.Dukes@motorola.com>

	* rnumber.scm: return #t or #f instead of 0 and non-zero.

	* rnumber.scm: added support for comparison operators so they will handle two
		integers as well as a mix of integers and rnumbers.

2002-09-04  Todd Dukes  <Todd.Dukes@motorola.com>

	*  rnumber.scm: added rn<< rn>> rn- rn+ rn-bitand rn-bitor

	*  changed default minimum size of RNumbers constructed from strings to 
	   be 32 bits. Previously only enough bits to hold the original value was
	   used as the minimum.

2002-09-03  Todd Dukes  <Todd.Dukes@motorola.com>

	* removed number-test.scm test.

	* bigloo/rnumber.scm: added following functions
	(rn<< a b)	  (rn>> a b)	  (rn- a b)	  (rn+ a b)

