@@ -193,16 +193,22 @@ fi
 dnl find bigloo
 AC_PATH_PROG(BIGLOOPROG,bigloo)
 if test "x$BIGLOOPROG" = x ; then
-   AC_ERROR("Could not find bigloo. Check your path to make sure it is present. Bigloo is available from http://www-sop.inria.fr/mimosa/fp/Bigloo/")
+   AC_WARN("Could not find bigloo. Check your path to make sure it is present.")
+   AC_WARN("Bigloo is available from http://www-sop.inria.fr/mimosa/fp/Bigloo/.")
+   AC_WARN("Bigloo bindings will *not* be built.")
+   BIGLOO=
+else
+   BIGLOO=bigloo
+   AC_MSG_RESULT("BIGLOOPROG $BIGLOOPROG")
+   BIGLOO_BINDIR=`dirname $BIGLOOPROG`
+   AC_MSG_RESULT("DIR_NAME $DIR_NAME")
+   BIGLOO_REVISION=`bigloo -revision`
+   BIGLOO_LIBDIR=${BIGLOO_BINDIR}/../lib/bigloo/${BIGLOO_REVISION}
+   AC_MSG_RESULT("BIGLOO_BINDIR $BIGLOO_BINDIR BIGLOO_LIBDIR $BIGLOO_LIBDIR")
+   AC_SUBST(BIGLOO_LIBDIR)
 fi
-
-AC_MSG_RESULT("BIGLOOPROG $BIGLOOPROG")
-BIGLOO_BINDIR=`dirname $BIGLOOPROG`
-AC_MSG_RESULT("DIR_NAME $DIR_NAME")
-BIGLOO_REVISION=`bigloo -revision`
-BIGLOO_LIBDIR=${BIGLOO_BINDIR}/../lib/bigloo/${BIGLOO_REVISION}
-AC_MSG_RESULT("BIGLOO_BINDIR $BIGLOO_BINDIR BIGLOO_LIBDIR $BIGLOO_LIBDIR")
-AC_SUBST(BIGLOO_LIBDIR)
+AC_SUBST([BIGLOO])
+AM_CONDITIONAL(WITHOUT_BIGLOO,test x$BIGLOO = x)
 
 dnl C++ compiler feature check start here
 dnl moved the c++ compiler alittle to make the basename check work right..
